# AgentOS

./: .gitignore  CMakeLists.txt  Dockerfile  PITCH.md  PLAN.md  README.md  STATUS.md  install.sh  vcpkg.json
.github/workflows/: ci.yml  release.yml
agents/examples/: hello_agent.py  spawn_test.py  thinking_agent.py  worker_agent.py
agents/python_sdk/: agentos.py  pyproject.toml
agents/python_sdk/clove_sdk/: __init__.py  agentic.py  client.py  fleet.py  llm_service.py  remote.py
demo/drug_research_pipeline/: README.md  benchmark_comparison.py  benchmark_orchestrator.py  benchmark_standalone.py  benchmark_worker.py
demo/drug_research_pipeline/configs/: benchmark.yaml  clove_limits.yaml  dataset.yaml  eval.yaml  featurize.yaml  train.yaml
demo/drug_research_pipeline/data/: README.md  ames_metadata.json  bbbp_metadata.json  clintox_full.csv  clintox_metadata.json  clintox_test.csv  clintox_train.csv  clintox_valid.csv  download_data.py  herg_full.csv  herg_metadata.json  herg_test.csv  herg_train.csv  herg_valid.csv  hiv_full.csv  hiv_metadata.json
demo/drug_research_pipeline/stages/: archive.py  evaluate.py  featurize.py  load_data.py  report.py  train.py
demo/incident_response_lab/: README.md  main.py  utils.py
demo/incident_response_lab/agents/: anomaly_triager.py  auditor.py  log_watcher.py  remediation_executor.py
demo/incident_response_lab/configs/: clove_limits.json  scenario.json
deploy/docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docker/: entrypoint.sh
docker/demos/: fault_isolation_demo.py
docs/: architecture_map.md  hot-reload.md  syscalls.md  world-simulation.md
src/: main.cpp
src/ipc/: protocol.hpp  socket_server.cpp  socket_server.hpp
src/ipc/transport/: socket_server.cpp  socket_server.hpp
src/kernel/: async_helpers.hpp  config.hpp  context.hpp  ipc_mailbox.cpp  ipc_mailbox.hpp  kernel.cpp  kernel.hpp  llm_client.cpp  llm_client.hpp  llm_queue.cpp  llm_queue.hpp  permissions.cpp  permissions.hpp  reactor.cpp  reactor.hpp  syscall_handlers.hpp
src/kernel/syscalls/: agents.cpp  exec.cpp  llm.cpp  network.cpp
src/runtime/: agent_process.cpp  agent_process.hpp  sandbox.cpp  sandbox.hpp
src/runtime/agent/: process.cpp  process.hpp
src/services/llm/: client.cpp  client.hpp
src/util/: logger.cpp  logger.hpp
tests/: crash_agent.py  success_agent.py  test_restart.py
worlds/examples/: README.md
worlds/examples/office_world/: README.md  __init__.py  manager_agent.py  office_config.py  run_office.py  worker_agent.py
worlds/examples/systems_world/: README.md  __init__.py  run_systems.py  server_agent.py  sre_agent.py  systems_config.py
